--- a/zomato-home.html
+++ b/zomato-home.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>Zomato Search and Filter Page</title>
+        <title>Zomato Home Page</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             
             <!-- CSS only -->
